refactor: eliminate duplicate AuthContextType and improve code quality
Frontend changes:
- Export AuthContextType from AuthContext.tsx for reusability
- Remove duplicate AuthContextValue interface from ProtectedRoute.test.tsx
- Add shared test fixtures (fixtures.ts) for consistent mock data
- Update all test files to use centralized mock users and factories
- Fix test type safety by using correct AuthContextType signature

Backend changes:
- Upgrade to JJWT 0.12.x API (deprecated methods replaced)
- Replace Collectors.toList() with Stream.toList() (Java 16+)
- Add @NotNull annotations for better null safety
- Remove unused imports across multiple files
- Extract magic string "unknown" to constant in AuditContextHolder
- Add private constructor to utility class AuditContextHolder
- Fix Javadoc formatting in ApiResponse

IDE configuration:
- Add IntelliJ IDEA module files for frontend and backend

All changes maintain backward compatibility and pass existing tests.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>